Зробив блок з товарами

--- a/index.html
+++ b/index.html
@@ -37,125 +37,182 @@
 	   					 <input type="checkbox" class="form-check-input" value="">Free Shipping
 	 					</label>
 				</div>
-			</div>	
+			</div>
 		</div>
-		<div class="second_filtr_block">
-			<div class="wrapper_2">
-				<div id="m_body"> 
-				    <ul class="font-weight-bold"> 
-					  <li><a href="#" onclick="menuOpen('s_mn_1');return(false)">Top sales</a> 
-						  <ul id="s_mn_1"> 
-						  <li><a href="#">1</a></li> 
-						  <li><a href="#">2</a></li> 
-						  </ul> 
-					  </li> 
-					  <li><a href="#" onclick="menuOpen('s_mn_2');return(false)">Brand focus</a> 
-						  <ul id="s_mn_2"> 
-						  <li><a href="#">1</a></li> 
-						  <li><a href="#">2</a></li> 
-						  </ul> 
-					  </li> 
-					  <li><a href="#" onclick="menuOpen('s_mn_5');return(false)">Hi-tech</a> 
-						  <ul id="s_mn_5"> 
-						  <li><a href="#">CELL PHONES</a></li>
-						  <li><a href="#">CAMERAS</a></li>
-						  <li><a href="#">COMPUTERS</a></li> 
-						  <li><a href="#">TV, AUDIO</a></li> 
-						  <li><a href="#">VIDEO GAMES</a></li> 
-						  </ul> 
-				  	   </li>
-				  	   <li><a href="#" onclick="menuOpen('s_mn_3');return(false)">Home</a> 
-						  <ul id="s_mn_3"> 
-						  <li><a href="#">1</a></li>
-						  <li><a href="#">2</a></li> 
-						  <li><a href="#">3</a></li> 
-						  </ul> 
-					  </li> 
-					  <li><a href="#" onclick="menuOpen('s_mn_4');return(false)">Sale</a> 
-						  <ul id="s_mn_4"> 
-						  <li><a href="#">1</a></li>
-						  <li><a href="#">2</a></li> 
-						  <li><a href="#">3</a></li> 
-						  </ul> 
-					  </li>
-					</ul> 
+		<div class="another_wrapper">
+			<div class="second_filtr_block">
+				<div class="wrapper_2">
+					<div id="m_body"> 
+					    <ul class="font-weight-bold"> 
+						  <li><a href="#" onclick="menuOpen('s_mn_1');return(false)">Top sales</a> 
+							  <ul id="s_mn_1"> 
+							  <li><a href="#">1</a></li> 
+							  <li><a href="#">2</a></li> 
+							  </ul> 
+						  </li> 
+						  <li><a href="#" onclick="menuOpen('s_mn_2');return(false)">Brand focus</a> 
+							  <ul id="s_mn_2"> 
+							  <li><a href="#">1</a></li> 
+							  <li><a href="#">2</a></li> 
+							  </ul> 
+						  </li> 
+						  <li><a href="#" onclick="menuOpen('s_mn_5');return(false)">Hi-tech</a> 
+							  <ul id="s_mn_5"> 
+							  <li><a href="#">CELL PHONES</a></li>
+							  <li><a href="#">CAMERAS</a></li>
+							  <li><a href="#">COMPUTERS</a></li> 
+							  <li><a href="#">TV, AUDIO</a></li> 
+							  <li><a href="#">VIDEO GAMES</a></li> 
+							  </ul> 
+					  	   </li>
+					  	   <li><a href="#" onclick="menuOpen('s_mn_3');return(false)">Home</a> 
+							  <ul id="s_mn_3"> 
+							  <li><a href="#">1</a></li>
+							  <li><a href="#">2</a></li> 
+							  <li><a href="#">3</a></li> 
+							  </ul> 
+						  </li> 
+						  <li><a href="#" onclick="menuOpen('s_mn_4');return(false)">Sale</a> 
+							  <ul id="s_mn_4"> 
+							  <li><a href="#">1</a></li>
+							  <li><a href="#">2</a></li> 
+							  <li><a href="#">3</a></li> 
+							  </ul> 
+						  </li>
+						</ul> 
+					</div>
+					
+				</div>
+
+			</div>	
+			<div class="goods_item text-center">
+				<div class="item">
+					<div class="img">
+						<img src="img/1.png" alt="">
+						<div class="text">
+							<h4>Apple TV 32GB</h4>
+							<h6 class='text-muted'>Black</h6>
+							<h5>$49.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/2.png" alt="">
+						<div class="text">
+							<h4>Pebble Time</h4>
+							<h6 class='text-muted'>Red</h6>
+							<h5>$29.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/3.png" alt="">
+						<div class="text">
+							<h4>Zendure 4-Port USB</h4>
+							<h6 class='text-muted'>White</h6>
+							<h5>$49.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/4.png" alt="">
+						<div class="text">
+							<h4>Withings Smart Body
+ 							Analyzer ws-50</h4>
+							<h6 class='text-muted'>Black</h6>
+							<h5>$39.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/5.png" alt="">
+						<div class="text">
+							<h4>Apple TV 32GB</h4>
+							<h6 class='text-muted'>Black</h6>
+							<h5>$49.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/6.png" alt="">
+						<div class="text">
+							<h4>Apple TV 32GB</h4>
+							<h6 class='text-muted'>Black</h6>
+							<h5>$49.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/7.png" alt="">
+						<div class="text">
+							<h4>Ollo Clip New</h4>
+							<h6 class='text-muted'>Silver</h6>
+							<h5>$19.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/8.png" alt="">
+						<div class="text">
+							<h4>Fitbit Charge HR Heart Rate 
+							and Activity Tracker</h4>
+							<h6 class='text-muted'>Black</h6>
+							<h5>$19.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/9.png" alt="">
+						<div class="text">
+							<h4>Apple Watch Sport 38mm 
+							Silver Aluminum Case</h4>
+							<h6 class='text-muted'>White</h6>
+							<h5>$49.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/10.png" alt="">
+						<div class="text">
+							<h4>Bose SoundLink 
+							On-Ear Headphones</h4>
+							<h6 class='text-muted'>White</h6>
+							<h5>$119.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/11.png" alt="">
+						<div class="text">
+							<h4>Apple TV 32GB</h4>
+							<h6 class='text-muted'>Black</h6>
+							<h5>$49.99</h5>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img">
+						<img src="img/12.png" alt="">
+						<div class="text">
+							<h4>Sonos Play-1 Wireless 
+							HiFi System</h4>
+							<h6 class='text-muted'>Black</h6>
+							<h5>$99.99</h5>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>	
-		<div class="goods_item">
-			<div class="item_1">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_2">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_3">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_4">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_5">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_6">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_7">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_8">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_9">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_10">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_11">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-			<div class="item_12">
-				<div class="img">
-					<img src="" alt="">
-					<div class="text"></div>
-				</div>
-			</div>
-		</div>
 	</section>
 
 </main>
