--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 				</div>
 				<div class='text-muted d-flex align-items-center price'>Price
 						<div class="form-group">
-							  <input type="text" class="form-control" id="from" onkeyup="search()">
+							  <input type="text" class="form-control" id="from" onkeyup="priceFrom()">
 						</div>
 						<span class='tyre'>-</span>
 						<div class="form-group">
-						  <input type="text" class="form-control" id="to" onkeyup="search()">
+						  <input type="text" class="form-control" id="to" onkeyup="priceTo()">
 						</div>
 				</div>
 				<div class="form-check">
@@ -58,11 +58,11 @@
 						  </li> 
 						  <li><a href="#" onclick="menuOpen('s_mn_5');return(false)">Hi-tech</a> 
 							  <ul id="s_mn_5"> 
-							  <li><a href="#">CELL PHONES</a></li>
-							  <li><a href="#">CAMERAS</a></li>
-							  <li><a href="#">COMPUTERS</a></li> 
-							  <li><a href="#">TV, AUDIO</a></li> 
-							  <li><a href="#">VIDEO GAMES</a></li> 
+							  <li><a href="#" onclick="cellPhones()">CELL PHONES</a></li>
+							  <li><a href="#" onclick="cameras()">CAMERAS</a></li>
+							  <li><a href="#" onclick="computers()">COMPUTERS</a></li> 
+							  <li><a href="#" onclick="tv_audio()">TV, AUDIO</a></li> 
+							  <li><a href="#" onclick="view_all()">VIEW ALL</a></li> 
 							  </ul> 
 					  	   </li>
 					  	   <li><a href="#" onclick="menuOpen('s_mn_3');return(false)">Home</a> 
@@ -82,11 +82,12 @@
 						</ul> 
 					</div>
 					<!-- Починай робити тут  -->
+					
 				</div>
 			</div>
 			
 			<div class="goods_item text-center" id='items'>
-				<div class="item">
+				<div class="item tv_audio">
 					<div class="img" id='item'>
 						<img src="img/1.png" alt="">
 						<div class="text" id='text'>
@@ -127,27 +128,27 @@
 						</div>
 					</div>
 				</div>
-				<div class="item">
+				<div class="item cellPhones">
 					<div class="img">
 						<img src="img/5.png" alt="">
 						<div class="text" id='text'>
-							<h4>Apple TV 32GB</h4>
+							<h4>Apple IPhone X 64GB</h4>
 							<h6 class='text-muted'>Black</h6>
-							<h5>$49.99</h5>
+							<h5>$899.99</h5>
 						</div>
 					</div>
 				</div>
-				<div class="item">
+				<div class="item computers">
 					<div class="img">
 						<img src="img/6.png" alt="">
 						<div class="text" id='text'>
-							<h4>Apple TV 32GB</h4>
+							<h4>Apple IMac 2017</h4>
 							<h6 class='text-muted'>Black</h6>
-							<h5>$49.99</h5>
+							<h5>$999.99</h5>
 						</div>
 					</div>
 				</div>
-				<div class="item">
+				<div class="item cameras">
 					<div class="img">
 						<img src="img/7.png" alt="">
 						<div class="text" id='text'>
@@ -179,7 +180,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item" id='item'>
+				<div class="item tv_audio" id='item'>
 					<div class="img">
 						<img src="img/10.png" alt="">
 						<div class="text" id='text'>
@@ -190,24 +191,23 @@
 						</div>
 					</div>
 				</div>
-				<div class="item" id='item'>
+				<div class="item tv_audio" id='item'>
 					<div class="img">
 						<img src="img/11.png" alt="">
 						<div class="text" id='text'>
-							<h4>Apple TV 32GB</h4>
+							<h4>Dynamik</h4>
 							<h6 class='text-muted'>Black</h6>
 							<h5>$49.99</h5>
 						</div>
 					</div>
 				</div>
-				<div class="item" id='item'>
+				<div class="item computers" id='item'>
 					<div class="img">
 						<img src="img/12.png" alt="">
 						<div class="text" id='text'>
-							<h4>Sonos Play-1 Wireless 
-							HiFi System</h4>
+							<h4>Apple MackBook Pro Retina 17</h4>
 							<h6 class='text-muted'>Black</h6>
-							<h5>$99.99</h5>
+							<h5>$899.99</h5>
 						</div>
 					</div>
 				</div>
