--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 				<li>Shop</li>
 				<li>Team</li>
 				<li>About us</li>
-				<li>Contacts</li>
+				<li><a href="comments/index.html">Contacts</a></li>
 			</ul>
 		</div>
 		<div class='links'>
