--- a/comments/index.html
+++ b/comments/index.html
@@ -27,11 +27,11 @@
 				font-family: "Arial", Georgia, Serif;
 			}
 			footer{
+				font-size: 16px;
 				background: #222;
 				color:white;
 				height: auto;
-				margin:20px -20px -20px -20px;
-				
+				margin:20px -20px -20px -20px;	
 			}
 			.upper_footer{
 				margin-left: 10%;
@@ -53,7 +53,14 @@
 			ul li{
 				margin-left: 15px;
 			}
-
+			footer a{
+				text-decoration: none;
+				color:white;
+			}
+			footer a:hover{
+				text-decoration: none;
+				color:white;
+			}
 			.lower_footer{
 				margin-left: 10%;
 				margin-right: 10%;
@@ -146,11 +153,11 @@
 				</div>
 				<div>
 					<ul class='font-weight-bold'>
-						<li>Home</li>
+						<li><a href="../index.html">Home</a></li>
 						<li>Shop</li>
 						<li>Team</li>
-						<li>About us</li>
-						<li>Contacts</li>
+						<li><a href="index.html">Comments</a></li>
+						<li><a>Contacts</a></li>
 					</ul>
 				</div>
 				<div class='links'>
